@@ -6,6 +6,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## [Unreleased]
+### Fixed
+- [PORTAL] [SELF_SERVICE] Disabled workflows listed
 
 
 ## [2.25.0]
